Snake movement implemented. A custom font type was added, as well.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <script type="text/javascript" src="Scripts/physics.js"></script>
 </head>
 <body>
-    <canvas width="900" height="700"></canvas>
-
     <div id="gameUI">
-        <div id="gameOverUI">GAME OVER</div>
+        <canvas width="810" height="660"></canvas>
+        <div id="gameOverUI">WASTED</div>
     </div>
 </body>
 </html>
