Food class has been added with collision detection.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <script type="text/javascript" src="Scripts/game.js"></script>
     <script type="text/javascript" src="Scripts/direction.js"></script>
     <script type="text/javascript" src="Scripts/physics.js"></script>
+    <script type="text/javascript" src="Scripts/map.js"></script>
+    <script type="text/javascript" src="Scripts/food.js"></script>
 </head>
 <body>
     <div id="gameUI">
-        <canvas width="810" height="660"></canvas>
+        <canvas width="800" height="640"></canvas>
         <div id="gameOverUI">WASTED</div>
     </div>
 </body>
