Added a tiled map. Fixed a bug, where the food would spawn on the snake itself.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <title>Snake</title>
     <link rel="stylesheet" href="Style/style.css" />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="Scripts/script.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="Scripts/main.js"></script>
+    <script type="text/javascript" src="Scripts/physics.js"></script>
+    <script type="text/javascript" src="Scripts/const.js"></script>
+    <script type="text/javascript" src="Scripts/food.js"></script>
+    <script type="text/javascript" src="Scripts/map.js"></script>
     <script type="text/javascript" src="Scripts/snake.js"></script>
     <script type="text/javascript" src="Scripts/game.js"></script>
-    <script type="text/javascript" src="Scripts/direction.js"></script>
-    <script type="text/javascript" src="Scripts/physics.js"></script>
-    <script type="text/javascript" src="Scripts/map.js"></script>
-    <script type="text/javascript" src="Scripts/food.js"></script>
 </head>
 <body>
     <div id="gameUI">
         <canvas width="800" height="640"></canvas>
         <div id="gameOverUI">WASTED</div>
+
+        <div id="menuUI">
+            <div id="playUI">Play</div>
+            <div id="optionsUI">Credits</div>
+        </div>
     </div>
 </body>
 </html>
