--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Snake</title>
     <link rel="stylesheet" href="Style/style.css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="Scripts/main.js"></script>
     <script type="text/javascript" src="Scripts/physics.js"></script>
     <script type="text/javascript" src="Scripts/const.js"></script>
@@ -14,11 +14,12 @@
     <script type="text/javascript" src="Scripts/game.js"></script>
 </head>
 <body>
-    <div id="gameUI" width="640" height="512">
+    <div id="gameUI">
         <canvas id="mainCanvas"></canvas>
         <div id="gameOverUI">
             <div id="gameOverTextUI">WASTED</div>
             <div id="gameRestartUI">Restart</div>
+            <div id="goToMenuUI">Menu</div>
         </div>
 
         <div id="gameScoreUI">SCORE: 0</div>
@@ -27,6 +28,19 @@
             <div id="menuUIButtons">
                 <div id="playUI">Play</div>
                 <div id="creditsUI">Credits</div>
+            </div>
+        </div>
+
+        <div id="choose_diff_id">
+            <div class="difficulty" id="easy">
+                <img src="Images/easy.jpg" alt="easy" width="128" height="128" />
+                <p>This is for all you newbies. You will get a ton of points without any real effort.</p>
+                <button id="easy_btn">CHOOSE THIS</button>
+            </div>
+            <div class="difficulty" id="hard">
+                <img src="Images/hard.png" width="128" height="128" />
+                <p>Oh so you want some challenge? Here you go!</p>
+                <button id="hard_btn">CHOOSE THIS</button>
             </div>
         </div>
     </div>
