added a basic design
* added new sprites for snake
* added new sprite for food
* added new sprite for wall
* added a new menu background image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div id="menuUI">
             <div id="menuUIButtons">
                 <div id="playUI">Play</div>
+                <div id="instructionsUI">Instructions</div>
                 <div id="creditsUI">Credits</div>
             </div>
         </div>
