added support for two player mode
* added the needed constants
* improved some classes
* image and direction is now handled in the Snake class
* WASD control added for the second player

* TODO: second player collision, improve the collision detection in
overall

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         <div id="menuUI">
             <div id="menuUIButtons">
-                <div id="playUI">Play</div>
+                <div id="onePlayerUI">One Player</div>
+                <div id="twoPlayerUI">Two Player</div>
                 <div id="instructionsUI">Instructions</div>
                 <div id="creditsUI">Credits</div>
             </div>
