added some cosmetic changes to the two player mode

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <div id="goToMenuUI">Menu</div>
         </div>
 
-        <div id="gameScoreUI">SCORE: 0</div>
+        <div id="gameScoreUI">
+            <div id="scorePlayerOne">SCORE: 0</div>
+            <div id="scorePlayerTwo">SCORE: 0</div>
+        </div>
 
         <div id="menuUI">
             <div id="menuUIButtons">
