--- a/index.html
+++ b/index.html
@@ -14,38 +14,40 @@
     <script type="text/javascript" src="Scripts/game.js"></script>
 </head>
 <body>
-    <div id="gameUI">
-        <canvas id="mainCanvas"></canvas>
-        <div id="gameOverUI">
-            <div id="gameOverTextUI">WASTED</div>
-            <div id="gameRestartUI">Restart</div>
-            <div id="goToMenuUI">Menu</div>
-        </div>
-
-        <div id="gameScoreUI">
-            <div id="scorePlayerOne">SCORE: 0</div>
-            <div id="scorePlayerTwo">SCORE: 0</div>
-        </div>
-
-        <div id="menuUI">
-            <div id="menuUIButtons">
-                <div id="onePlayerUI">One Player</div>
-                <div id="twoPlayerUI">Two Player</div>
-                <div id="instructionsUI">Instructions</div>
-                <div id="creditsUI">Credits</div>
+    <div id="borderUI">
+        <div id="gameUI">
+            <canvas id="mainCanvas"></canvas>
+            <div id="gameOverUI">
+                <div id="gameOverTextUI">WASTED</div>
+                <div id="gameRestartUI">Restart</div>
+                <div id="goToMenuUI">Menu</div>
             </div>
-        </div>
 
-        <div id="choose_diff_id">
-            <div class="difficulty" id="easy">
-                <img src="Images/easy.jpg" alt="easy" width="128" height="128" />
-                <p>This is for all you newbies. You will get a ton of points without any real effort.</p>
-                <button id="easy_btn">CHOOSE THIS</button>
+            <div id="gameScoreUI">
+                <div id="scorePlayerOne">SCORE: 0</div>
+                <div id="scorePlayerTwo">SCORE: 0</div>
             </div>
-            <div class="difficulty" id="hard">
-                <img src="Images/hard.png" width="128" height="128" />
-                <p>Oh so you want some challenge? Here you go!</p>
-                <button id="hard_btn">CHOOSE THIS</button>
+
+            <div id="menuUI">
+                <div id="menuUIButtons">
+                    <div id="onePlayerUI">One Player</div>
+                    <div id="twoPlayerUI">Two Player</div>
+                    <div id="instructionsUI">Instructions</div>
+                    <div id="creditsUI">Credits</div>
+                </div>
+            </div>
+
+            <div id="choose_diff_id">
+                <div class="difficulty" id="easy">
+                    <img src="Images/easy.jpg" alt="easy" width="128" height="128" />
+                    <p>This is for all you newbies. You will get a ton of points without any real effort.</p>
+                    <button id="easy_btn">CHOOSE THIS</button>
+                </div>
+                <div class="difficulty" id="hard">
+                    <img src="Images/hard.png" width="128" height="128" />
+                    <p>Oh so you want some challenge? Here you go!</p>
+                    <button id="hard_btn">CHOOSE THIS</button>
+                </div>
             </div>
         </div>
     </div>
