added bonus food
* the bonus food has an 8% chance of appearing instead of a regular
food. It gives the player 2 points and the snake will grow 2 blocks.
* the player has 5 seconds to pick up the bonus food or else it will
disappear

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
             <div id="gameScoreUI">
                 <div id="scorePlayerOne">SCORE: 0</div>
+                <div id="remainingTimeUI">00:05</div>
                 <div id="scorePlayerTwo">SCORE: 0</div>
             </div>
 
