--- a/test.html
+++ b/test.html
@@ -5,6 +5,8 @@
     <title>Snake</title>
     <link rel="stylesheet" href="Style/style.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script>
+    </script>
 
 </head>
 <body>
