fixed a bug where on some occasions the seconds player score would not show

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="menuUI">
                 <div id="menuUIButtons">
                     <div id="onePlayerUI">One Player</div>
-                    <div id="twoPlayerUI">Two Player</div>
+                    <div id="twoPlayerUI">Two Players</div>
                     <div id="instructionsUI">Instructions</div>
                     <div id="creditsUI">Credits</div>
                 </div>
