added sound effect
* added background songs
* added sound effects for eating, hitting something and ticking

--- a/index.html
+++ b/index.html
@@ -30,12 +30,40 @@
             </div>
 
             <div id="menuUI">
-                <div id="menuUIButtons">
+                <div class="menuUIButtons">
                     <div id="onePlayerUI">One Player</div>
                     <div id="twoPlayerUI">Two Players</div>
+                    <div id="optionsBtn">Options</div>
                     <div id="instructionsUI">Instructions</div>
                     <div id="creditsUI">Credits</div>
                 </div>
+            </div>
+
+            <div id="optionsUI">
+                <div class="menuUIButtons">Music</div>
+                <div id="musicUI" class="menuUIButtons">
+                    <select name="music_select" id="music_select_id" class="menuUIButtons">
+                        <option selected value="0">AC / DC - Highway to Hell</option>
+                        <option value="3">Guns N Roses - Paradise City</option>
+                        <option value="1">CCR - Fortunate Son</option>
+                        <option value="2">CCR - Have You Ever Seen the Rain</option>
+                        <option value="4">The Doors - Riders On the Storm</option>
+                        <option value="5">Off</option>
+                    </select>
+                </div>
+
+                <div id="sound_effect_option" class="menuUIButtons">
+                    Sound effects
+                    <input type="checkbox" id="sound_effect_checkbox" value="sound_effesafc" checked />
+                </div>
+
+                <div id="timeChallengeUI" class="menuUIButtons">
+                    <label for="timechallenge_check">Time Challenge</label>
+                    <input id="timechallenge_check" type="checkbox" />
+                </div>
+
+                <div id="optionsBackBtn" class="menuUIButtons">Back</div>
+                <div id=""></div>
             </div>
 
             <div id="choose_diff_id">
