--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Snake</title>
     <link rel="stylesheet" href="Style/style.css" />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="Scripts/main.js"></script>
     <script type="text/javascript" src="Scripts/physics.js"></script>
     <script type="text/javascript" src="Scripts/const.js"></script>
