added game speed
* the players can now choose from three options: slow, normal and fast.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div id="sound_effect_option" class="menuUIButtons">
                     Sound effects
-                    <input type="checkbox" id="sound_effect_checkbox" value="sound_effesafc" checked />
+                    <input type="checkbox" id="sound_effect_checkbox" value="sound_effect" checked />
                 </div>
 
                 <div id="timeChallengeUI" class="menuUIButtons">
@@ -62,7 +62,16 @@
                     <input id="timechallenge_check" type="checkbox" />
                 </div>
 
-                <div id="optionsBackBtn" class="menuUIButtons">Back</div>
+                <div id="gameSpeedUI" class="menuUIButtons">
+                    Game speed <br />
+                    <select id="game_speed_select" name="game_speed_select">
+                        <option value="slow">Slow</option>
+                        <option value="normal" selected>Normal</option>
+                        <option value="fast">Fast</option>
+                    </select>
+                </div>
+
+                <div id="optionsBackBtn" class="menuUIButtons"><span>Back</span></div>
                 <div id=""></div>
             </div>
 
