added a progress bar to the menu page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <div id="borderUI">
         <div id="gameUI">
             <canvas id="mainCanvas"></canvas>
+
+            <div id="progress_div">
+                <progress value="0" max="100"></progress>
+            </div>
+
             <div id="gameOverUI">
                 <div id="gameOverTextUI">WASTED</div>
                 <div id="gameRestartUI">Restart</div>
