added a more responsive design
**

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Snake</title>
-    <link rel="stylesheet" href="Style/style.css" />
+    <link rel="stylesheet" media="(min-width: 1920px)" href="Style/style_fhd.css" />
+    <link rel="stylesheet" media="(max-width: 1400px)" href="Style/style_hd.css" />
     <link rel="shortcut icon" href="Images/snake_icon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="Scripts/main.js"></script>
